--- a/src/scss/components/_photo-albums.scss
+++ b/src/scss/components/_photo-albums.scss
@@ -45,7 +45,7 @@ $card-spacing: 3vw;
                             }
 
                             .album-cover {
-                                transform: scale(1.05);
+                                transform: scale(1.025);
                             }
                         }
 
@@ -105,44 +105,6 @@ $card-spacing: 3vw;
                                     }
                                 }
                             }
-
-                            // .album-cover-dot-text-container {
-                            //     text-align: center;
-                            //     display: table;
-                            //     width: 100%;
-                            //     height: 100%;
-                            //     z-index: 11;
-
-                            //     .album-cover-dot-text,
-                            //     .album-cover-dot-text-responsive {
-                            //         display: table-cell;
-                            //         vertical-align: middle;
-                            //         position: relative;
-                            //         z-index: 11;
-                            //         letter-spacing: 1px;
-                            //         text-transform: uppercase;
-                            //         font-weight: 700;
-                            //         color: $white;
-                            //         font-size: 1rem;
-                            //     }
-
-                            //     @media (min-width: $layout-breakpoint-small) {
-                            //         .album-cover-dot-text-responsive {
-                            //             display: none;
-                            //         }
-                            //     }
-
-                            //     @media (max-width: $layout-breakpoint-small) {
-                            //         .album-cover-dot-text {
-                            //             display: none;
-                            //         }
-
-                            //         .album-cover-dot-text-responsive {
-                            //             font-weight: 200;
-                            //             font-size: 2rem;
-                            //         }
-                            //     }
-                            // }
                         }
 
                         .image-container {
@@ -152,7 +114,7 @@ $card-spacing: 3vw;
                                 width: 100%;
                                 height: 100%;
                                 object-fit: cover;
-                                transition: 0.5s ease-in-out;
+                                transition: 0.5s cubic-bezier(.25,.11,.34,1);
                             }
                         }
                     }
