--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -30,3 +30,8 @@ $wrapper-value-navbar: 5vw;
 
 //Padding values
 $padding-top-global: 8vh;
+
+//Z-indexes
+$z-index-image-modal: 101;
+$z-index-navbar: 100;
+$z-index-navmenu: 99;
