--- a/src/scss/components/_image-modal.scss
+++ b/src/scss/components/_image-modal.scss
@@ -11,33 +11,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 11;
+    z-index: $z-index-image-modal;
 
     .modal-image {
-        height: 80%;
+        height: 90%;
         object-fit: contain;
     }
 }
 
 .close-btn {
-    background-color: $black;
-    border: 2px solid $black;
-    border-radius: 2em;
-    font-weight: 500;
-    font-family: inherit;
-    text-transform: uppercase;
-    padding-inline: 2em;
-    padding-block: 0.2em;
-    color: $white;
-    font-size: 1.5rem;
+    border: none;
+    background-color: transparent;
     cursor: pointer;
     position: absolute;
-    top: 6em;
-    right: 6em;
-    transition: 0.3s ease-in-out;
-
-    &:hover {
-        background-color: transparent;
-        color: $black;
-    }
+    top: 4vh;
+    right: 5vw;
+    color: $black;
+    font-size: 4rem;
+    cursor: pointer !important;
 }
