--- a/src/scss/pages/_portfolio.scss
+++ b/src/scss/pages/_portfolio.scss
@@ -1,44 +1,57 @@
 .image-gallery {
-    padding-top: 20vh;
+    padding-top: 25vh;
     .container {
-        .portfolio-header {
-            font-weight: 700;
-            font-size: calc(clamp(3rem, 7vw, 5rem) * 0.875);
-        }
-
         .image-category-tags {
             display: flex;
             text-align: left;
             place-items: left;
             justify-content: left;
-            margin-top: 7em;
-            margin-bottom: 4em;
+            margin-bottom: 7em;
             cursor: pointer !important;
+
+            &:hover {
+                color: $text-color;
+            }
+
+            ul {
+                display: flex;
+                li {
+                    display: inline-block;
+                    margin-inline: 2em;
+                    font-size: 2rem;
+                }
+            }
 
             .tag-button {
                 position: relative;
-                color: $black;
                 font-family: inherit;
                 font-size: 1.8rem;
                 transition: 0.3s ease-in-out;
-                margin-inline: 1.3rem;
+                margin-inline: 2.5rem;
                 text-transform: capitalize;
+                transition: 0.3s ease-in-out;
+
+                @media (max-width: $layout-breakpoint-small) {
+                    margin-inline: 1.5rem;
+                }
 
                 &::before {
-                    content: "";
+                    content: "\2022";
                     position: absolute;
-                    width: 100%;
-                    height: 2px;
-                    border-radius: 4px;
-                    background-color: $black;
-                    bottom: -7px;
-                    left: 0;
+                    top: -5px;
+                    margin-left: -20px;
+                    font-size: calc(clamp(2rem, 7vw, 3rem) * 0.875);
                     opacity: 0;
                     transition: 0.3s ease-in-out;
                 }
 
-                &:hover::before {
-                    opacity: 1;
+                &:hover {
+                    color: black;
+                    font-weight: 600;
+
+                    &::before {
+                        opacity: 1;
+                    }
                 }
 
                 &:first-child {
@@ -46,15 +59,9 @@
                 }
 
                 &.active {
+                    font-weight: 600;
+
                     &::before {
-                        content: "";
-                        position: absolute;
-                        width: 100%;
-                        height: 2px;
-                        border-radius: 4px;
-                        background-color: $black;
-                        bottom: -7px;
-                        left: 0;
                         opacity: 1;
                     }
                 }
