--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -68,25 +68,9 @@
                     grid-template-columns: 100%;
                 }
 
-                .title-container {
-                    width: 100%;
-                    height: 100%;
-                    align-items: center;
-                    justify-content: space-between;
-
-                    .section-header-about {
-                        font-size: 2rem;
-                        font-weight: 600;
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                    }
-
-                    .idk-yet {
-                        position: absolute;
-                        bottom: 0;
-                        left: 0;
-                    }
+                .section-header-about {
+                    font-size: 2rem;
+                    font-weight: 600;
                 }
 
                 .paragraphs-container {
@@ -124,10 +108,10 @@
                     width: 100%;
 
                     .services-container {
-                        border-top: 1px solid $black;
+                        border-top: 1px solid $divider-color;
                         .accordian {
                             width: 100%;
-                            border-bottom: 1px solid $black;
+                            border-bottom: 1px solid $divider-color;
                             .accordion-header {
                                 display: grid;
                                 grid-template-columns: 20% 80%;
@@ -142,8 +126,8 @@
                                 .accordion-index {
                                     color: $black;
                                     margin-block: auto;
-                                    font-weight: 600;
-                                    font-size: calc(clamp(1.6rem, 4vw, 2.2rem) * 0.875);
+                                    font-weight: 500;
+                                    font-size: calc(clamp(1.6rem, 4vw, 2.5rem) * 0.875);
 
                                     @media (max-width: $layout-breakpoint-small) {
                                         display: none;
@@ -198,7 +182,7 @@
                                     color: $text-color;
                                     max-width: 50ch;
                                     line-height: 1.8;
-                                    font-size: calc(clamp(1.4rem, 4vw, 2.5rem) * 0.875);
+                                    font-size: calc(clamp(1.4rem, 4vw, 2rem) * 0.875);
 
                                     @media (max-width: $layout-breakpoint-xsmall) {
                                         width: 90%;
