motion page responsive and done, footer change, photo album minor change and responsive banner working

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -35,3 +35,8 @@ $padding-top-global: 8vh;
 $z-index-image-modal: 101;
 $z-index-navbar: 100;
 $z-index-navmenu: 99;
+
+
+//Other
+$hero-section-height: 125vh;
+$hero-section-height-xsmall: 150vh;
