--- a/src/scss/pages/_motion.scss
+++ b/src/scss/pages/_motion.scss
@@ -13,18 +13,30 @@
                 display: grid;
                 grid-template-columns: 40% 60%;
 
+                @media (max-width: $layout-breakpoint-small) {
+                    grid-template-columns: 100%;
+                }
+
                 .video-title-column {
                     .video-title {
-                        font-size: clamp(2rem, 5vw, 2.8rem);
+                        font-size: clamp(2.5rem, 5vw, 2.8rem);
                         font-weight: 700;
+                    }
+
+                    @media (max-width: $layout-breakpoint-small) {
+                        padding-bottom: 6em;
                     }
                 }
 
                 .video-description-column {
                     .video-description {
                         line-height: 1.8;
-                        font-size: clamp(1.3rem, 5vw, 1.8rem);
+                        font-size: clamp(1.5rem, 3vw, 1.8rem);
                         color: $text-color;
+
+                        @media (max-width: $layout-breakpoint-small) {
+                            color: $black;
+                        }
                     }
                 }
             }
@@ -39,7 +51,7 @@
 
 .video-info-category {
     font-size: clamp(1.4rem, 5vw, 1.6rem);
-    color: rgb(190, 190, 190);
+    color: rgb(170, 170, 170);
     padding-bottom: 1.3em;
 
 }
