--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -2,6 +2,7 @@
     visibility: hidden;
     width: 100%;
     height: 100vh;
+    display: block;
 
     @media (max-width: $layout-breakpoint-small) {
         display: none;    
