--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -48,7 +48,7 @@
                 }
 
                 @media (max-width: $layout-breakpoint-xsmall) {
-                    height: 300px;
+                    height: 500px;
                 }
             }
         }
@@ -71,6 +71,10 @@
                 .section-header-about {
                     font-size: 2rem;
                     font-weight: 600;
+
+                    @media (max-width: $layout-breakpoint-small) {
+                        padding-bottom: 2em;
+                    }
                 }
 
                 .paragraphs-container {
@@ -192,6 +196,16 @@
                             }
                         }
                     }
+                }
+            }
+
+            .tools {
+                padding-top: 20vh;
+                .tools-paragraph {
+                    line-height: 1.8;
+                    font-size: calc(clamp(2.2rem, 2.5vw, 3.3rem) * 0.875);
+                    color: $text-color;
+                    word-spacing: -1px;
                 }
             }
         }
