--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,4 +1,4 @@
-.re-designed-banner {
+.hero {
     visibility: hidden;
     width: 100%;
     height: 100vh;
@@ -8,11 +8,11 @@
         display: none;    
     }
 
-    .banner-container {
+    .hero-container {
         width: 100%;
         height: 100%;
 
-        .banner-grid {
+        .hero-grid {
             width: 100%;
             height: 100%;
             display: grid;
@@ -80,7 +80,7 @@
                 }
             }
 
-            .big-banner-image {
+            .hero-image {
                 position: relative;
                 top: 5%;
                 z-index: 1;
@@ -88,7 +88,7 @@
                 height: 90%;
                 overflow: hidden;
 
-                .banner-reveal {
+                .hero-image-reveal {
                     z-index: 2;
                     position: absolute;
                     width: 100%;
