--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -203,9 +203,14 @@
                 padding-top: 20vh;
                 .tools-paragraph {
                     line-height: 1.8;
-                    font-size: calc(clamp(2.2rem, 2.5vw, 3.3rem) * 0.875);
+                    font-size: calc(clamp(2.2rem, 2.5vw, 3.1rem) * 0.875);
                     color: $text-color;
                     word-spacing: -1px;
+
+                    .tool {
+                        font-weight: 600;
+                        color: $black;
+                    }
                 }
             }
         }
