--- a/src/scss/components/_footer-normal.scss
+++ b/src/scss/components/_footer-normal.scss
@@ -1,10 +1,10 @@
-
-.footer {
+.footer-normal {
     width: 100%;
     height: 100vh;
+    display: block;
 
     @media (max-width: $layout-breakpoint-small) {
-        height: 100%;
+        display: none;
     }
 
     .container {
@@ -22,7 +22,6 @@
 
         @media (max-width: $layout-breakpoint-small) {
             padding-top: 10vh;
-            // padding-bottom: 15vh;
         }
 
         .top-footer-row {
@@ -36,8 +35,6 @@
                 height: 45vh;
                 grid-row-gap: 0 !important;
             }
-
-            
 
             .footer-email {
                 width: 100%;
@@ -54,6 +51,11 @@
                         font-size: calc(clamp(2rem, 4vw, 4rem) * 0.875);
                         padding-bottom: 5rem;
                         color: $text-color;
+
+                        //Changes font size and padding bottom
+                        @media (max-width: 800px) {
+                            padding-bottom: 3rem;
+                        }
 
                         //Changes font size and padding bottom
                         @media (max-width: $layout-breakpoint-xsmall) {
@@ -105,7 +107,7 @@
                     vertical-align: middle;
                     .footer-socials-responsive-container {
                         @media (max-width: $layout-breakpoint-xsmall) {
-                            padding-block: .7rem;
+                            padding-block: 0.7rem;
                         }
                         .footer-socials-responsive-link {
                             color: $white;
@@ -149,14 +151,14 @@
                         display: block;
                         color: $text-color;
                         margin-top: 3vh;
-                    }  
+                    }
 
                     .footer-copyright {
                         margin-right: 3vw;
 
                         @media (max-width: $layout-breakpoint-small) {
                             display: none;
-                        }  
+                        }
                     }
 
                     .footer-copyright-version-two {
@@ -165,8 +167,7 @@
 
                         @media (min-width: $layout-breakpoint-small) {
                             display: none;
-                        }  
-
+                        }
                     }
 
                     .made-by {
