--- a/src/scss/components/_photo-albums.scss
+++ b/src/scss/components/_photo-albums.scss
@@ -98,7 +98,7 @@ $card-spacing: 3vw;
                                 .album-cover-dot-text { 
                                     z-index: 11;
                                     color: $white;
-                                    font-size: 2rem;
+                                    font-size: 2.2rem;
 
                                     @media (max-width: $layout-breakpoint-small) {
                                         font-size: 1.6rem;
@@ -109,6 +109,8 @@ $card-spacing: 3vw;
 
                         .image-container {
                             transform: translateZ(1px);
+                            width: 100%;
+                            height: 100%;
 
                             .album-cover {
                                 width: 100%;
