--- a/src/scss/components/_footer-normal.scss
+++ b/src/scss/components/_footer-normal.scss
@@ -15,26 +15,12 @@
         z-index: 2;
         align-items: flex-end;
 
-        @media (max-width: $layout-breakpoint-small) {
-            padding-inline: $wrapper-value-breakpoint-small;
-            padding-block: 10vh;
-        }
-
-        @media (max-width: $layout-breakpoint-small) {
-            padding-top: 10vh;
-        }
-
         .top-footer-row {
             width: 100%;
             height: 90vh;
             display: grid;
             grid-template-columns: 100%;
             grid-row-gap: 10vh;
-
-            @media (max-width: $layout-breakpoint-small) {
-                height: 45vh;
-                grid-row-gap: 0 !important;
-            }
 
             .footer-email {
                 width: 100%;
@@ -51,34 +37,23 @@
                         font-size: calc(clamp(2rem, 4vw, 4rem) * 0.875);
                         padding-bottom: 5rem;
                         color: $text-color;
-
-                        //Changes font size and padding bottom
-                        @media (max-width: 800px) {
-                            padding-bottom: 3rem;
-                        }
-
-                        //Changes font size and padding bottom
-                        @media (max-width: $layout-breakpoint-xsmall) {
-                            padding-bottom: 2rem;
-                        }
                     }
 
                     .email-header-link {
                         padding-block: 2rem;
 
-                        @media (max-width: $layout-breakpoint-xsmall) {
-                            padding-block: 0.2rem;
-                        }
-
                         a {
+                            // font-weight: 600;
+                            // font-size: calc(clamp(3rem, 7vw, 10rem) * 0.875);
+                            // color: $white;
+                            // cursor: pointer !important;
+                            margin-bottom: 2rem;
+                            display: flex;
+                            align-items: center;
                             font-weight: 600;
                             font-size: calc(clamp(3rem, 7vw, 10rem) * 0.875);
                             color: $white;
-                            cursor: pointer !important;
-                        }
-
-                        &.email a {
-                            text-decoration: none;
+                            column-gap: 1rem;
                         }
 
                         .email-link-icon {
@@ -98,26 +73,15 @@
                 height: 100%;
                 display: none;
 
-                @media (max-width: $layout-breakpoint-small) {
-                    display: table;
-                }
-
                 .footer-socials-responsive-list {
                     display: table-cell;
                     vertical-align: middle;
                     .footer-socials-responsive-container {
-                        @media (max-width: $layout-breakpoint-xsmall) {
-                            padding-block: 0.7rem;
-                        }
                         .footer-socials-responsive-link {
                             color: $white;
                             text-decoration: none;
                             font-size: 2rem;
                             cursor: pointer !important;
-
-                            @media (max-width: $layout-breakpoint-xsmall) {
-                                font-size: 2rem;
-                            }
                         }
                     }
                 }
@@ -131,43 +95,21 @@
             font-weight: 600;
             color: $white;
 
-            @media (max-width: $layout-breakpoint-small) {
-                font-size: 1.3rem;
-            }
-
             .footer-bottom-container {
                 width: 100%;
                 display: grid;
                 grid-template-columns: 50% 50%;
 
-                @media (max-width: $layout-breakpoint-small) {
-                    grid-template-columns: 100%;
-                }
-
                 .footer-bottom-left {
                     display: flex;
 
-                    @media (max-width: $layout-breakpoint-small) {
-                        display: block;
-                        color: $text-color;
-                        margin-top: 3vh;
-                    }
-
                     .footer-copyright {
                         margin-right: 3vw;
-
-                        @media (max-width: $layout-breakpoint-small) {
-                            display: none;
-                        }
                     }
 
                     .footer-copyright-version-two {
                         color: $white;
                         font-size: 1.5rem;
-
-                        @media (min-width: $layout-breakpoint-small) {
-                            display: none;
-                        }
                     }
 
                     .made-by {
@@ -182,10 +124,6 @@
                                 color: $white;
                             }
                         }
-
-                        @media (max-width: $layout-breakpoint-small) {
-                            margin-top: 5vh;
-                        }
                     }
                 }
 
@@ -195,10 +133,6 @@
                     align-items: right;
                     justify-content: right;
 
-                    @media (max-width: $layout-breakpoint-small) {
-                        display: none;
-                    }
-
                     .footer-bottom-socials-links {
                         color: $white;
                         text-decoration: none;
@@ -206,11 +140,7 @@
                         transition: 0.3s ease-in-out;
                         cursor: pointer !important;
 
-                        @media (max-width: $layout-breakpoint-xsmall) {
-                            padding-right: 0px;
-                            padding-block: 0.8rem;
-                            display: block;
-
+                        &:last-child {
                             .comma {
                                 display: none;
                             }
