--- a/src/scss/components/_footer-responsive.scss
+++ b/src/scss/components/_footer-responsive.scss
@@ -7,9 +7,76 @@
         display: block;
     }
 
-    
+    .footer-container {
+        background-color: $black;
+        padding-top: 10vh;
+        padding-bottom: 5vh;
+        padding-inline: $wrapper-value-breakpoint-small;
+        position: relative;
+        z-index: 2;
+        .interested-section {
+            .interested-question {
+                font-weight: 100;
+                font-size: calc(clamp(2rem, 4vw, 3.5rem) * 0.875);
+                padding-bottom: 2.5rem;
+                color: $text-color;
+            }
 
-    
+            .email-link {
+                a {
+                    margin-bottom: 2rem;
+                    display: flex;
+                    align-items: center;
+                    font-weight: 600;
+                    font-size: calc(clamp(3rem, 7vw, 5rem) * 0.875);
+                    color: $white;
+                    column-gap: 1rem;
+                }
+            }
+
+            .instagram-link {
+                a {
+                    display: flex;
+                    align-items: center;
+                    font-weight: 600;
+                    font-size: calc(clamp(3rem, 7vw, 5rem) * 0.875);
+                    color: $white;
+                    column-gap: 1rem;
+                }
+            }
+        }
+        .socials-section {
+            padding-block: 6rem;
+            .socials {
+                .social-link {
+                    padding-block: .5rem;
+                    a {
+                        font-weight: 100;
+                        font-size: calc(clamp(1.3rem, 6vw, 2.7rem) * 0.875);
+                        color: $white;
+                        column-gap: 1rem;
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
+        .copyright-section {
+            .made-by {
+                margin-bottom: 1.5rem;
+                a {
+                    font-weight: 600;
+                    text-decoration: none;
+                    color: $white;
+                    font-size: calc(clamp(1.1rem, 4vw, 1.6rem) * 0.875);
+                }
+            }
+            .copyright {
+                font-weight: 600;
+                font-size: calc(clamp(1.1rem, 4vw, 1.6rem) * 0.875);
+                color: $white;
+            }
+        }
+    }
 }
 
 // .container {
