feat: added about page fields, minor styling changes and approriate html tag naming

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -16,3 +16,10 @@
   background-color: $divider-color;
   margin-block: 1.3em;
 }
+
+.image-info {
+    font-weight: 500;
+    padding-top: 1.5rem;
+    font-size: calc(clamp(1.5rem, 2.5vw, 1.7rem) * 0.875);
+    color: $text-color;
+}
