--- a/src/scss/components/_footer-normal.scss
+++ b/src/scss/components/_footer-normal.scss
@@ -43,10 +43,6 @@
                         padding-block: 2rem;
 
                         a {
-                            // font-weight: 600;
-                            // font-size: calc(clamp(3rem, 7vw, 10rem) * 0.875);
-                            // color: $white;
-                            // cursor: pointer !important;
                             margin-bottom: 2rem;
                             display: flex;
                             align-items: center;
@@ -54,6 +50,11 @@
                             font-size: calc(clamp(3rem, 7vw, 10rem) * 0.875);
                             color: $white;
                             column-gap: 1rem;
+                            transition: .3s ease-in-out;
+
+                            &:hover {
+                                padding-left: 1.5rem;
+                            }
                         }
 
                         .email-link-icon {
