--- a/src/scss/pages/_photo-albums-page.scss
+++ b/src/scss/pages/_photo-albums-page.scss
@@ -8,6 +8,7 @@
                 display: grid;
                 grid-template-columns: repeat(2, 1fr);
                 width: 100%;
+                column-gap: 4rem;
 
                 @media (max-width: $layout-breakpoint-small) {
                     grid-template-columns: repeat(1, 1fr);
